--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -72,3 +72,5 @@ obj-$(CONFIG_TI_DRV2667) += ti_drv2667.o
 obj-$(CONFIG_QPNP_MISC) += qpnp-misc.o
 obj-$(CONFIG_SN3193_SLED) += shineled/
 obj-$(CONFIG_UID_CPUTIME) += uid_cputime.o
+
+obj-y				+= sound_control.o
