defconfig: SPEED level interface
Change-Id: I8957c21857702bae6742a9777d2f563142a5df2c

--- a/arch/arm/configs/cyanogenmod_bacon_defconfig
+++ b/arch/arm/configs/cyanogenmod_bacon_defconfig
@@ -3644,3 +3644,4 @@ CONFIG_QMI_ENCDEC=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_LCD_KCAL=y
 CONFIG_PVS_LEVEL_INTERFACE=y
+CONFIG_SPEED_LEVEL_INTERFACE=y
